--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,50 @@
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    scroll-behavior: smooth;
+}
+
+.main>.home{
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+.home video{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+}
+.home .img-container{
+    position: absolute;
+    bottom: 15px;
+}
+.home .img-container img{
+    width: 30px;
+}
+.pulse {
+    animation: pulse 1s infinite ease-in-out alternate;
+}
+@keyframes pulse {
+    from { transform: scale(0.8); }
+    to { transform: scale(1.1); }
+}
+@media (min-aspect-ratio: 16/9) {
+    .home video{
+        width: 100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio: 16/9) {
+    .home video{
+        width: auto;
+        height: 100%;
+    }
+}
 
 .main>.job-description{
-    background-image: url('/image/job\ section\ background.png');
+    background-image: url('image/job\ section\ background.png');
     background-color: rgba(0, 0, 0, 0.5);
     background-repeat: no-repeat;
     background-size: cover;
@@ -48,7 +89,7 @@
 }
 
 .main>.flow-up{
-    background-image: url('/image/flow\ up\ to\ adoption\ background.png');
+    background-image: url('image/flow\ up\ to\ adoption\ background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -95,7 +136,7 @@
 }
 
 .main>.staff-voice{
-    background-image: url('/image/staff\ voice\ background.png');
+    background-image: url('image/staff\ voice\ background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -121,7 +162,7 @@
 }
 
 .main>.events{
-    background-image: url('/image/enents\ and\ activities.png');
+    background-image: url('image/enents\ and\ activities.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
